--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,11 @@
     "start": "bun run dist/index.js"
   },
   "dependencies": {
+    "@discourse/db": "workspace:*",
+    "@hono/zod-validator": "^0.4.0",
     "hono": "^4.6.0",
-    "zod": "^3.23.0"
+    "zod": "^3.23.0",
+    "jose": "^5.9.0",
+    "argon2": "^0.41.0"
   }
 }
