--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "dev": "bun run --parallel dev:api dev:web",
     "dev:api": "bun run --filter @discourse/api dev",
     "dev:web": "bun run --filter @discourse/web dev",
-    "build": "bun run --filter '*' build",
+    "build": "echo 'No build step needed for Bun'",
+    "start": "bun run apps/api/src/index.ts",
     "db:migrate": "bun run --filter @discourse/db migrate",
     "db:push": "bun run --filter @discourse/db push",
     "db:studio": "bun run --filter @discourse/db studio",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "setup": "bun run docker:up && sleep 3 && bun install && bun run db:push",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
-    "@types/node": "^24.10.1",
+    "@types/node": "^22.10.1",
     "typescript": "^5.6.0"
   }
 }
