--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "migrate": "bunx drizzle-kit migrate",
-    "push": "bunx drizzle-kit push",
-    "studio": "bunx drizzle-kit studio",
-    "generate": "bunx drizzle-kit generate"
+    "generate": "drizzle-kit generate",
+    "push": "drizzle-kit push --force",
+    "studio": "drizzle-kit studio",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "drizzle-orm": "^0.34.0",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.25.0"
