--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "@biomejs/biome": "^1.9.0",
     "@types/node": "^22.10.1",
     "typescript": "^5.6.0"
+  },
+  "dependencies": {
+    "@node-rs/argon2": "^2.0.2",
+    "jose": "^6.1.3"
   }
 }
