--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,14 +1,18 @@
 {
   "name": "@discourse/web",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.tsx",
-    "build": "bun build src/index.tsx --outdir=dist --target=bun",
-    "start": "bun run dist/index.js"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "hono": "^4.6.0"
+  "devDependencies": {
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
