--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Build output
+dist/
+
+# Large download files (upload manually to server)
+public/downloads/*.zip
+public/downloads/*.exe
+public/downloads/*.dmg
+public/downloads/*.AppImage
