landing page name and logo changed

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ============================================
-# discourse.ai Environment Variables
+# cortify.ai Environment Variables
 # Copy to .env and fill in your values
 # ============================================
 
@@ -8,7 +8,7 @@ PORT=8787
 NODE_ENV=development
 
 # Database (Docker)
-DATABASE_URL=postgres://discourse:discourse_dev@localhost:5432/discourse_ai
+DATABASE_URL=postgres://cortify:cortify_dev@localhost:5432/cortify_ai
 
 # Auth
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
