--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,17 @@ version: "3.8"
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: discourse_postgres
+    container_name: cortify_postgres
     environment:
-      POSTGRES_USER: discourse
-      POSTGRES_PASSWORD: discourse_dev
-      POSTGRES_DB: discourse_ai
+      POSTGRES_USER: cortify
+      POSTGRES_PASSWORD: cortify_dev
+      POSTGRES_DB: cortify_ai
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U discourse -d discourse_ai"]
+      test: ["CMD-SHELL", "pg_isready -U cortify -d cortify_ai"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -21,7 +21,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: discourse_redis
+    container_name: cortify_redis
     ports:
       - "6379:6379"
     volumes:
