--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discourse/api",
+  "name": "@cortify/api",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -9,7 +9,7 @@
     "start": "bun run dist/index.js"
   },
   "dependencies": {
-    "@discourse/db": "workspace:*",
+    "@cortify/db": "workspace:*",
     "@hono/zod-validator": "^0.4.0",
     "hono": "^4.6.0",
     "zod": "^3.23.0",
