--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "paths": {
-      "@discourse/db": ["./packages/db/src/index.ts"]
+      "@cortify/db": ["./packages/db/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "dist", "**/dist"]
