Remove backend & DB, keep landing frontend
Drop the API and database packages and refocus repo as a standalone landing page.

- Deleted apps/api and packages/db code, routes, middleware, and configs (backend removed).
- Simplified .env.example to a single VITE_API_BASE_URL for the production API.
- Reworked README to document the landing-page frontend, dev/build commands, env requirements, features, and deployment notes.
- Moved/renamed web assets and configs to the repo root (vite.config, tailwind/postcss, public images, scripts, styles, vite-env.d.ts) and removed apps/web-specific package/tsconfig files.
- Updated root package.json and tsconfig.json and added .gitignore.web.

Result: repository is converted to a frontend-only landing page that connects to a production API; backend and DB responsibilities have been removed from this repo.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "strict": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
-    "paths": {
-      "@cortify/db": ["./packages/db/src/index.ts"]
-    }
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["node_modules", "dist", "**/dist"]
+  "include": ["src"]
 }
