--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,5 @@
-# ============================================
-# cortify.ai Environment Variables
-# Copy to .env and fill in your values
-# ============================================
+# Production API Configuration
+# Copy this file to .env and update with your actual values
 
-# Server
-PORT=8787
-NODE_ENV=development
-
-# Database (Docker)
-DATABASE_URL=postgres://cortify:cortify_dev@localhost:5432/cortify_ai
-
-# Auth
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=7d
-
-# AI Services (get from respective dashboards)
-GROQ_API_KEY=your-groq-api-key
-DEEPGRAM_API_KEY=your-deepgram-api-key
-
-# CORS (comma-separated origins)
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+# API Base URL (no trailing slash)
+VITE_API_BASE_URL=https://your-production-api-url.com/api
