--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "cortify.ai",
+  "name": "cortify-landing-page",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "dev": "bun run --parallel dev:api dev:web",
-    "dev:api": "bun run --filter @cortify/api dev",
-    "dev:web": "bun run --filter @cortify/web dev",
-    "build": "echo 'No build step needed for Bun'",
-    "start": "bun run apps/api/src/index.ts",
-    "db:migrate": "bun run --filter @cortify/db migrate",
-    "db:push": "bun run --filter @cortify/db push",
-    "db:studio": "bun run --filter @cortify/db studio",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.0",
-    "@types/node": "^22.10.1",
-    "typescript": "^5.6.0"
-  },
-  "dependencies": {
-    "@node-rs/argon2": "^2.0.2",
-    "jose": "^6.1.3"
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
